# storage

./: LICENSE  README.md  pyproject.toml
api/domain/: aggregate_root.py
api/infrastructure/: aggregate_root_repository.py  async_aggregate_root_repository.py  in_memory_aggregate_root_repository.py
codec/: aggregate_root_deserializer.py  aggregate_root_serializer.py
common/domain/: aggregate_root.py
common/infrastructure/: aggregate_root_repository.py  async_aggregate_root_repository.py  in_memory_aggregate_root_repository.py
