[project]
name = "storage"
version = "0.0.1"
description = "The groundbremaking library that breathes life into your data and models with consistent elegance. Effortlessly manage storage while implementing the powerful repository design pattern."
readme = "README.md"
requires-python = ">=3.13, <4.0"
license = { file = "LICENSE" }
authors = [
    { name = "srvenient", email = "srvenient@gmail.com" },
]
dependencies = [
    "anyio[trio]>=4.12.0",
    "attrs>=25.4.0",
    "sqlalchemy>=2.0.44",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
